Fix layout issue

--- a/src/components/DDay.module.css
+++ b/src/components/DDay.module.css
@@ -40,6 +40,9 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    border-top: 1px solid #e5e5e5;
+    padding-top: 1rem;
+    margin-top: 1rem;
 }
 
 .box--row .schedule {
@@ -75,11 +78,4 @@
     font-size: 2.2rem;
     font-weight: 600;
     padding: 1rem 0;
-}
-
-.separator {
-    width: 100%;
-    height: 1px;
-    background-color: #e5e5e5;
-    margin: 1rem 0;
 }
