--- a/src/components/UserProfileButton.module.scss
+++ b/src/components/UserProfileButton.module.scss
@@ -27,6 +27,16 @@
     width: auto;
 }
 
+.profilePicOnly {
+    padding: 0.6rem;
+    height: auto;
+
+    & > .userProfilePic {
+        width: 2.8rem;
+        height: 2.8rem;
+    }
+}
+
 .userProfilePic {
     width: 2rem;
     height: 2rem;
